VeraSandBox2016/src/objects/Module__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date of Module</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Comments__c</fullName>
        <label>Module Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Module_from_Catalog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Module from Catalog</label>
        <referenceTo>Catalog__c</referenceTo>
        <relationshipLabel>Modules</relationshipLabel>
        <relationshipName>Modules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trainer_Comments__c</fullName>
        <label>Trainer Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trainer_Rate_EUR__c</fullName>
        <label>Trainer Rate EUR</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trainer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Modules</relationshipLabel>
        <relationshipName>Modules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training</label>
        <referenceTo>Training__c</referenceTo>
        <relationshipLabel>Modules</relationshipLabel>
        <relationshipName>Modules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Module</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MOD-{00000}</displayFormat>
        <label>JRRID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Modules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>